link issues page
also make sure scrollbar is below footer and fix grammar/spelling

--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ h2{
 
 #timeline{
     width:95vw;
-    height:40vw;
-    min-height:40vw;
+    height: calc(100vh - 10vw);
+    min-height: calc(100vh - 10vw);
     /* background:#eee; */
     box-sizing: border-box;
     position:relative;
